Fix Text clipping on product cards

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -217,6 +217,7 @@ footer .social-icon > img {
     font-size: 1.3rem;
     text-wrap: nowrap;
     text-overflow: ellipsis;
+    line-height: 1.3;
     overflow: hidden;
 }
 
